# stepup-queue

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.md  mkdocs.yaml  pyproject.toml  versions.json
.github/: requirements-old.txt
.github/workflows/: pytest.yaml  release.yaml
1.0/: 404.html  index.html  objects.inv
1.0/changelog/: index.html
1.0/development/: index.html
1.0/examples/slurm-basic/: dynamic-template.sh  index.html
1.0/examples/slurm-basic/fail/: slurmjob.sh
1.0/examples/slurm-perpetual/: index.html  workflow.sh
1.0/installation/: index.html
1.0/license/: index.html
1.0/search/: search_index.json
1.0/stepup.queue.api/: index.html
1.0/usage/: index.html
1.1/: index.html
1.1/changelog/: index.html
1.1/development/: index.html
1.1/examples/slurm-basic/: index.html
1.1/examples/slurm-basic/pass/: slurmjob.py
1.1/examples/slurm-perpetual/: index.html  workflow.sh
1.1/examples/slurm-perpetual/step1/: slurmjob.sh
1.1/examples/slurm-perpetual/step2/: slurmjob.sh
1.1/installation/: index.html
1.1/license/: index.html
1.1/search/: search_index.json
1.1/usage/: index.html
dev/: 404.html  index.html
dev/changelog/: index.html
dev/development/: index.html
dev/examples/slurm/: dynamic-template.sh  plan.py
dev/examples/slurm-basic/: index.html  plan.py
dev/examples/slurm-basic/fail/: slurmjob.sh
dev/examples/slurm-perpetual/: index.html  plan.py  workflow.sh
dev/examples/slurm-perpetual/step1/: slurmjob.sh
dev/examples/slurm-perpetual/step2/: slurmjob.sh
dev/examples/slurm/pass/: slurmjob.py
dev/examples/slurm/static/: slurmjob.sh
dev/installation/: index.html
dev/license/: index.html
dev/search/: search_index.json
dev/stepup.queue.api/: index.html
dev/usage/: index.html
docs/: changelog.md  development.md  index.md  installation.md  license.md  stepup.queue.api.md  usage.md
docs/examples/slurm/: .gitignore  dynamic-template.sh  plan.py
docs/examples/slurm-basic/: README.md  plan.py
docs/examples/slurm-basic/pass/: slurmjob.py
docs/examples/slurm-perpetual/: .gitignore  README.md  plan.py  workflow.sh
docs/examples/slurm/fail/: slurmjob.sh
docs/examples/slurm/static/: slurmjob.py
stepup/queue/: __init__.py  actions.py  api.py  canceljobs.py  log.py  removejobs.py  sbatch.py  utils.py
tests/: conftest.py  test_log.py  test_sbatch.py  test_utils.py
